--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Site Maintenance</title>
 <style>
-  body { text-align: center; padding: 150px; background-color: #ead3ed; }
+  body { text-align: center; padding: 150px; }
   h1 { font-size: 50px; }
   h2 { font-size: 32px;}
   body { font: 20px Helvetica, sans-serif; color: #333; }
@@ -11,9 +11,6 @@
 </style>
 
 <article>
-    <div style="height: 20px; background-color: #e380db;">
-        <p style="color: white;">octopus report weimar</p>
-    </div>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:admin@octopus-report.de">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
