--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   body { font: 20px Helvetica, sans-serif; color: #333; }
   article { display: block; text-align: left; width: 650px; margin: 0 auto; }
   a { color: #e380db; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
+  a:hover { color: #513269; text-decoration: none; }
 </style>
 
 <article>
@@ -22,6 +22,9 @@
         <li>cloud.octopus-report.de</li>
       </ul>
       <p>for more detailed information check <a href="https://status.octopus-report.de">status.octopus-report.de</a> </p>
+    </div>
+    <div style="font-size: 18px;">
+        <p>octopus report weimar | <a href="mailto:team@octopus-report.de">team@octopus-report.de</a> | <a href="https://www.instagram.com/octopus.report.weimar">@octopus.report.weimar</a></a></p>
     </div>
 </article>
 
