--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
       <p>for more detailed information check <a href="https://status.octopus-report.de">status.octopus-report.de</a> </p>
     </div>
-    <div style="font-size: 18px;">
+    <div style="font-size: 14px; color: #666;">
         <p>octopus report weimar | <a href="mailto:team@octopus-report.de">team@octopus-report.de</a> | <a href="https://www.instagram.com/octopus.report.weimar">@octopus.report.weimar</a></a></p>
     </div>
 </article>
