--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Site Maintenance</title>
 <style>
-  body { text-align: center; padding: 150px; }
+  body { text-align: center; padding: 150px; position: relative;}
   h1 { font-size: 50px; }
   h2 { font-size: 32px;}
   body { font: 20px Helvetica, sans-serif; color: #333; }
@@ -23,7 +23,7 @@
       </ul>
       <p>for more detailed information check <a href="https://status.octopus-report.de">status.octopus-report.de</a> </p>
     </div>
-    <div style="font-size: 14px; color: #666;">
+    <div style="font-size: 14px; color: #666; position: absolute; bottom: 0; left: 0;">
         <p>octopus report weimar | <a href="mailto:team@octopus-report.de">team@octopus-report.de</a> | <a href="https://www.instagram.com/octopus.report.weimar">@octopus.report.weimar</a></a></p>
     </div>
 </article>
