--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
       </ul>
       <p>for more detailed information check <a href="https://status.octopus-report.de">status.octopus-report.de</a> </p>
     </div>
+</article>
+<body>
     <div style="position: relative; text-align: center;">
         <div style="font-size: 16px; color: #666; position: absolute; bottom: 0; width: 100%; padding: 15ßx 0;">
             <p>octopus report weimar | <a href="mailto:team@octopus-report.de">team@octopus-report.de</a> | <a href="https://www.instagram.com/octopus.report.weimar">@octopus.report.weimar</a></a></p>
         </div>
     </div>
-</article>
-
+</body>
