--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Site Maintenance</title>
 <style>
-  body { text-align: center; padding: 150px;}
+  body { text-align: center; padding: 150px; height: 100%;}
   h1 { font-size: 50px; }
   h2 { font-size: 32px;}
   body { font: 20px Helvetica, sans-serif; color: #333; }
