--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <li>www.octopus-report.de</li>
         <li>cloud.octopus-report.de</li>
       </ul>
-      <p>for more detailed information check <a href="https://status.octopus-report.de">status.octopus-report.de</a> </p>
+      <p>for more detailed information check <a href="https://uptime.octopus-report.de">uptime.octopus-report.de</a> </p>
     </div>
-    <div style="font-size: 16px; color: #666; position: fixed; bottom: 0; width: 100%; padding: 15ßx 0;">
+    <div style="font-size: 16px; color: #666; position: fixed; bottom: 0; width: 100%; padding: 15ßx 0; margin: 20px">
       <p>octopus report weimar | <a href="mailto:team@octopus-report.de">team@octopus-report.de</a> | <a href="https://www.instagram.com/octopus.report.weimar">@octopus.report.weimar</a></a></p>
     </div>
 </article>
