--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<header>
 <title>Site Maintenance</title>
 <style>
   body { text-align: center; padding: 150px; height: 100%;}
@@ -9,6 +10,8 @@
   a { color: #e380db; text-decoration: none; }
   a:hover { color: #513269; text-decoration: none; }
 </style>
+<script src="https://betteruptime.com/widgets/announcement.js" data-id="144275" async="async" type="text/javascript"></script>
+</header>
 
 <article>
     <h1>We&rsquo;ll be back soon!</h1>
@@ -22,6 +25,7 @@
         <li>cloud.octopus-report.de</li>
       </ul>
       <p>for more detailed information check <a href="https://uptime.octopus-report.de">uptime.octopus-report.de</a> </p>
+      <iframe src="https://uptime.octopus-report.de" width="1000" height="800"></iframe>
     </div>
     <div style="font-size: 16px; color: #666; position: fixed; bottom: 0; width: 100%; padding: 15ßx 0; margin: 20px">
       <p>octopus report weimar | <a href="mailto:team@octopus-report.de">team@octopus-report.de</a> | <a href="https://www.instagram.com/octopus.report.weimar">@octopus.report.weimar</a></a></p>
