--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </style>
 <script src="https://betteruptime.com/widgets/announcement.js" data-id="144275" async="async" type="text/javascript"></script>
 </header>
-
+<body>
 <article>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
@@ -30,3 +30,4 @@
       <p>octopus report weimar | <a href="mailto:team@octopus-report.de">team@octopus-report.de</a> | <a href="https://www.instagram.com/octopus.report.weimar">@octopus.report.weimar</a></a></p>
     </div>
 </article>
+</body>
