--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h2>Affected Systems:</h2>
       <ul>
         <li>cloud.octopus-report.de</li>
+        <li>www.octopus-report.de</li>
       </ul>
       <p>for more detailed information check <a href="https://uptime.octopus-report.de">uptime.octopus-report.de</a> </p>
     </div>
